# MedPulse

./: .env.example  .pre-commit-config.yaml  LINT.md  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  render.yaml
backend/: .env.example  .flake8  .gitignore  Dockerfile  LINT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 79f302b81b89_init.py
backend/example/: dev.py  ingest_data.py  setup_vector_store.py
backend/notebooks/: evaluate.ipynb
backend/qllm/: dev.py  index.py  init_setting.py  main.py
backend/qllm/alembic/: env.py
backend/qllm/alembic/versions/: 0a26dbae5dec_sync_data_schema.py  10c4b390af9c_remove_id.py  113ea238658a_sync_database_schema.py  11a619e24bd5_sync_data_schema.py  1c94ca6ef07a_add_id_to_user.py  24c2375cc7e7_sync_data_schema.py  2ce2747b86a2_sync_data_schema.py  322814d347c8_sync_data_schema.py  35092bb8bcd0_sync_data_schema.py  36452382a402_sync_data_schema.py  56475328e32f_sync_data_schema.py  58dc3b337ee4_sync_data_schema.py  6c74c3d3939b_sync_database_schema.py  6efbea0a004e_sync_data_schema.py  7ca9e8beebc8_sync_data_schema.py  7d780aef4247_sync_data_schema.py  7db228edf6fa_sync_data_schema.py  83b55047b9d4_sync_data_schema.py  870d065282bf_delete_cascade_mode.py  88d6781c0e25_fix_foreign_key.py  8c2b1fabe162_sync_data_schema.py  915d343103da_normalize_user_table.py  a50c3e6dbc22_sync_data_schema.py  aebe87a697e1_sync_database_schema.py  b6d60c870717_add_age_and_gender_to_user.py  bdd45921ae97_fix_relationship_user_medicalrecord.py  c3308de4a9cd_initial_migration.py  dd225c9b9e5f_.py  (+4 more)
backend/qllm/api/: deps.py
backend/qllm/chat/: __init__.py  engine.py  index.py  query_transform.py  synthesizer.py
backend/qllm/core/: config.py  database.py  logger.py  vector_store.py
backend/qllm/models/: __init__.py  base.py  model.py
backend/qllm/prompts/: __init__.py  base.py
backend/qllm/services/: memory_service.py  qdrant_service.py
frontend/: .env  (+6 more)
(+63 files in other folders)
