[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.poetry]
name = "qllm"
version = "0.1.0"
description = ""
authors = ["LongBaoCoder2 <longbao.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymilvus = "^2.4.9"
qdrant-client = "^1.12.1"
weaviate-client = "^4.9.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
