[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.poetry]
name = "qllm"
version = "0.1.0"
description = ""
authors = ["LongBaoCoder2 <longbao.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
alembic = "^1.13.1"
python = ">=3.11,<3.13"
qdrant-client = "^1.12.1"
pymilvus = "^2.4.9"
mem0ai = "^0.1.30"
openai = "^1.55.0"
llama-index = "^0.12.1"
llama-index-memory-mem0 = "^0.2.0"
llama-index-vector-stores-qdrant = "^0.4.0"
llama-index-readers-file = "^0.4.0"
llama-index-embeddings-fastembed = "^0.3.0"
llama-index-llms-openai = "^0.3.1"
llama-index-agent-openai = "^0.4.0"
llama-index-core = "^0.12.1"
fastembed = "^0.4.2"
pydantic-settings = "^2.6.1"
psycopg2 = "^2.9.10"
pyjwt = "^2.10.1"
asyncpg = "^0.30.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.10.6"}
requests = "^2.32.3"
llama-index-readers-papers = "^0.3.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
cachetools = "^5.5.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
faker = "^33.1.0"

[tool.poetry.scripts]
start = "qllm.main:start"
migrate_db = "qllm.main:migrate_db"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
